updated docker setup in Jenkinsfile